data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4425.wast
;; 4. **Incorrect Operand Stack Arguments Test**:    - **Description**: Execute a `call_indirect` instruction with insufficient arguments on the operand stack.    - **Constraint**: Ensures that lack of required operands results in a proper trap.    - **CFG Relation**: Validates that the CFG handles operand underflow as an invalid path that results in trapping without executing unintended instructions.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table funcref (elem $f))
    (func $f (param i32) (result i32) (i32.mul (local.get 0) (i32.const 2)))
    (func $test
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "insufficient operands"
)